# otus-architecture-patterns-2022-02

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: validate.yml
src/: sqr_eqs.py
tests/: test_sql_eqs.py
