[tool.poetry]
name = "otus-architecture-patterns-2022-02"
version = "0.1.0"
description = "Домашние задания для курса \"Шаблоны проектирования\" от Otus."
readme = "README.md"
authors = ["Andrew Brailov <brailov@tochka.com>"]
repository = "https://github.com/qxiddd/otus-architecture-patterns-2022-02"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
pytest-watch = "^4.2.0"
bpython = "^0.22.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
